# agri_challenge

./: readme.md
Ros1/: README.md
Ros1/agri_control/: CMakeLists.txt  README.md  package.xml
Ros1/agri_control/include/agri_control/: agri_control.h
Ros1/agri_control/include/agri_state_machine/: agri_state_machine.h
Ros1/agri_control/launch/: agri_control.launch
Ros1/agri_control/src/: agri_control.cpp  agri_control_node.cpp  agri_state_machine.cpp  agri_state_machine_node.cpp
Ros1/agri_gazebo_scene/: CMakeLists.txt  package.xml
Ros1/agri_robot_moveit_setup/: .setup_assistant  CMakeLists.txt  package.xml
Ros1/agri_robot_moveit_setup/config/: fake_controllers.yaml  gazebo_ur5_robot.urdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml  ur5_robot.srdf
Ros1/agri_robot_moveit_setup/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml  trajectory_execution.launch.xml  ur5_robot_moveit_controller_manager.launch.xml  warehouse.launch
Ros2/src/: README
Ros2/src/log/: latest_list
models/: Supporto UR5 Realsense.stl  readme.txt
(+188 files in other folders)
